mise à jours - marges

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<div class="container">
 			<header>
-				<img src="images/header.png" alt="skateboard sur un sol goudronné">
+				<img src="images/header.png" alt="skateboard sur un sol goudronné"/>
 				<div class="headerTextContent">
 					<h1>RIDING CITIES</h1>
 				</div>
@@ -40,7 +40,7 @@
 					</div>
 				</section>
 				<section>
-					<div class="sectionLinearGradientBackground">
+					<div style="padding-top: 8%;padding-bottom:8%;" class="sectionLinearGradientBackground"><!--margin-right:-20% ;margin-left: -20%; pour les marges-->
 					<div class= "whiteContentSection">
 					<h2>Les membres fondateurs</h2>
 					</div>
@@ -65,15 +65,14 @@
 							</article>
 							<article>
 							<img src="images/pedro.png" alt="Pedro">
-						<div class= "textCenter">	
-						<div class= "whiteContentSection">
+						<div class= "textCenter whiteContentSection ">	
 							<h3>Pedro</h3>
 							<p>Pool</p>
 						</div>
 					</article>
 				</section>
 			<section>
-					<div class="sectionLightGreyBackground">
+					<div style="padding-top:8% ;padding-bottom:8% ;" class="sectionLightGreyBackground"><!--margin-right:-20% ;margin-left: -20%; pour les marges-->
 							<div class= "buttonDrakGreyColor">
 							    <h2>Découvrer nos cours !</h2>
 								</div>
